
Feature oriented Revision history for Test-DBIC-ExpectedQueries
===============================================================

{{$NEXT}}

1.005 -- 2015-02-22 17:58:28 UTC

* More POD improvements



1.004 -- 2015-02-20 17:30:45 UTC

* Default ->test() to an empty hashref

* Reset collected stats when calling ->test() properly!



1.003 -- 2015-02-20 16:48:11 UTC

* Reset collected stats when calling ->test().


1.002 -- 2015-02-20 14:34:10 UTC

* Even more better POD docs.



1.001 -- 2015-02-20 13:51:38 UTC

* POD



1.000 -- 2015-02-19 20:51:12 UTC

* First release


